SDSS-824: Fixed Firefox wrapping bug with caption text (#197)
* SDSS-824: Fixed Firefox wrapping bug with caption text.

--- a/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/utilities/mixins/_typography.scss
+++ b/docroot/profiles/sdss/sdss_profile/themes/sdss_subtheme/src/scss/utilities/mixins/_typography.scss
@@ -211,7 +211,8 @@
 @mixin sdss-caption {
   color: $sdss-color-black;
   text-align: left;
-  width: 100%;
+  float: unset;
+  width: auto;
 
   @include grid-media-min('2xl') {
     font-size: 1.9rem;
